[tool.poetry]
name = "discord-gpt"
version = "0.1.0"
description = ""
authors = ["Claudio Brito <@br.LordJunio>"]
readme = "README.md"
packages = [{include = "discord_gpt"}]

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.2.3"
python-dotenv = "^1.0.0"
openai = "^0.27.6"
firebase-admin = "^6.1.0"

[tool.poetry.group.dev.dependencies]
openai-chat = "^0.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
